--- a/login.css
+++ b/login.css
@@ -19,8 +19,7 @@ body, html {
     margin-bottom: 10px;
 }
 
-input[type="text"],
-input[type="password"]{
+input{
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
