--- a/login.css
+++ b/login.css
@@ -1,4 +1,4 @@
-body {
+body{
     background-color: #222;
     color: #fff;
     font-family: sans-serif;
@@ -9,25 +9,27 @@ body {
     min-height: 100vh;
 }
 
-.navbar {
+.navbar{
     background-color: #111;
     width: 100%;
     padding: 1rem;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
 }
 
+/* Added border styling for navbar links */
 .navbar a {
     color: #fff;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* Low-opacity white border */
 }
 
 .navbar a:hover {
     background-color: #333;
 }
+
 
 .login-box {
     margin: 2rem auto;
