--- a/logout.css
+++ b/logout.css
@@ -16,18 +16,20 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
 }
 
+/* Added border styling for navbar links */
 .navbar a {
     color: #fff;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* Low-opacity white border */
 }
 
 .navbar a:hover {
     background-color: #333;
 }
+
 
 .logout-box {
     margin: 2rem auto;
