--- a/logout.css
+++ b/logout.css
@@ -1,4 +1,4 @@
-body {
+body{
     background-color: #222;
     color: #fff;
     font-family: sans-serif;
@@ -9,7 +9,7 @@ body {
     min-height: 100vh;
 }
 
-.navbar {
+.navbar{
     background-color: #111;
     width: 100%;
     padding: 1rem;
@@ -18,20 +18,23 @@ body {
     left: 0;
 }
 
+.logo{
+    height: 10px;
+}
 
-.navbar a {
+.navbar a{
     color: #fff;
     text-decoration: none;
     padding: 0.5rem 1rem;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.navbar a:hover {
+.navbar a:hover{
     background-color: #333;
 }
 
 
-.logout-box {
+.logout-box{
     margin: 2rem auto;
     padding: 2rem;
     border-radius: 5px;
