--- a/search.css
+++ b/search.css
@@ -1,3 +1,100 @@
+:root{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body{
+    background-image: linear-gradient(rgb(59, 59, 59) , white, white, white, white)
+}
+
 #logo{
-    height: 100px;
+    position: absolute;
+    height: 25px;
+    margin: 10px;
+    margin-top: 18px;
+    float: left;
+}
+
+#searchbar{
+    position: absolute;
+    margin:20px
+}
+
+#search{
+    position: absolute;
+    margin: 10px 300px 10px 250px;
+    padding-left: 20px;
+    height:40px;
+    min-width: 510px;
+    border-radius: 5px;
+    border: 1px solid rgb(218, 218, 218);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+}
+
+#searchbutton{
+    position: absolute;
+    margin: 10px 510px 0px 755px;
+    height:40px;
+    min-width: 100px;
+    border-radius: 0px 5px 5px 0px;
+    border: 1px solid rgb(218, 218, 218);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+}
+
+
+#results{
+    position: absolute;
+    margin-top: 130px;
+    margin-left: -10px;
+    padding: 50px;
+    padding-right: 40vw;
+    background-color: white;
+    border-top: 1px solid rgb(219, 219, 219);
+    width: auto;
+    height: auto;
+}
+
+#filters label{
+    font-weight: normal;
+    margin: 0px;
+}
+
+#filters{
+    position:absolute;
+    margin-top: 88px;
+    margin-left: 50px;
+    font-weight: bold;
+}
+
+#filtertxt{
+    margin-right: 30px
+}
+
+#posts{
+    position: relative;
+}
+
+.post{
+    width: 100%;
+    height: 100%;
+    margin-bottom: 50px;
+}
+
+.title{
+    font-weight: bold;
+    font-size: 22px;
+    color:rgb(33, 33, 39)
+}
+
+.rating{
+    font-weight: bold;
+    font-size: 17px;
+    color: rgb(194, 197, 0);
+    text-shadow: 1px 1px 0px black;
+}
+
+.desc{
+    font-weight: lighter;
+    font-size: 15px;
 }
