--- a/establishmentreviews.css
+++ b/establishmentreviews.css
@@ -32,6 +32,7 @@ body{
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 100;
 }
 
 .logo{
@@ -64,6 +65,13 @@ body{
     padding: 0.5rem 1rem;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1); 
     font-size: small;
+    
+}
+
+#page_navigation div {  
+    position: relative;
+    margin-left: 92%;
+    width: 8%;
 }
 
 #page_navigation a:hover {
