--- a/establishmentreviews.css
+++ b/establishmentreviews.css
@@ -13,7 +13,7 @@
 }
 
 body{
-    background-color: #303030;
+    background-color: lightgray;
     color: #fff;
     font-family: sans-serif;
     display: flex;
