Changing to Dark theme pages for consistency

--- a/establishmentreviews.css
+++ b/establishmentreviews.css
@@ -13,7 +13,7 @@
 }
 
 body{
-    background-color: lightgray;
+    background-color: #222;
     color: #fff;
     font-family: sans-serif;
     display: flex;
