--- a/search.css
+++ b/search.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    background-image: linear-gradient(rgb(59, 59, 59) , white, white, white, white)
+    background-color: rgb(59, 59, 59,1) ;
 }
 
 #logo{
@@ -49,7 +49,8 @@ body{
     margin-left: -10px;
     padding: 50px;
     padding-right: 40vw;
-    background-color: white;
+    background-color: #222;
+    color:white;
     border-top: 1px solid rgb(219, 219, 219);
     width: auto;
     height: auto;
@@ -84,7 +85,7 @@ body{
 .title{
     font-weight: bold;
     font-size: 22px;
-    color:rgb(33, 33, 39)
+    color:rgb(233, 233, 239)
 }
 
 .rating{
