--- a/ownerprofile.css
+++ b/ownerprofile.css
@@ -4,19 +4,48 @@ body{
     background-repeat: no-repeat;
     background-color: #222;
     color:white;
-    text-shadow: 2px 2px black;
+    font-family: Arial, Helvetica, sans-serif;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.navbar{
+    background-color: #111;
+    width: 100%;
+    padding: 1rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
+
+.logo{
+    height: 10px;
+}
+
+.navbar a {
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1); 
+}
+
+.navbar a:hover {
+    background-color: #333;
 }
 
 h1{
-    position:absolute;
     font-family: "Hammersmith One", sans-serif;
     font-weight: 100;
     font-style: normal;
     letter-spacing: 5px;
-    margin: 25px;
-    color: white;
-    font-size: 50px;
-    min-width: 1000px;
+    padding: 25px;
+    color: white;   
+    font-size: 50px;    
+    width:100%;
+    background-color: gray;
 }
 
 #verified{
@@ -25,8 +54,6 @@ h1{
 }
 
 #ownerpfp{
-    position:absolute;
-    margin: 14vh;
     margin-left: 100px;
     border-radius: 100%;
     height: 13rem;
@@ -45,17 +72,14 @@ h1{
     font-size: 14px;
 }
 
-#profilepane{
-    position: absolute;
-    margin: 32vh 10vw;
-    margin-left: 120px;
-    padding-right: 10vh;
-    min-width: 500px;
+#profilepane{   
+    margin-left: 20px;
+    width:45%;
 }
 
 #responses{
-    position: absolute;
-    margin-top: 30em
+    margin-top: 15em;
+    width: 100%;
 }
 
 #ownername{
@@ -69,10 +93,15 @@ h1{
 
 #ownerbio{
     min-width: 1000px;
-}
+}   
 
 .response{
-    margin: 3em
+    margin: 3em;
+    border: 4px solid #333;
+    border-radius: 25px;
+    padding: 20px;
+    padding-left: 30px;
+    background-color: gray;
 }
 
 .name{
@@ -110,8 +139,23 @@ h1{
 }
 
 .likes{
-    font-weight: 600;
+    font-weight: 600;   
     margin: 20px;
+}   
+
+#titular{
+    display: flex;
+    flex-direction: row;
+    float:left; 
+    position:relative;
 }
 
+.responsetitle{
+    color:lightblue;   
+    font:bold; 
+    font-style: italic  ;
+}
 
+.ownerrespo{
+    font-style: italic  ;
+}
