--- a/views/login.html
+++ b/views/login.html
@@ -2,12 +2,11 @@
 <html>
 <head>
     <title>Login</title>
-    <link rel="stylesheet" href="login.css">
-    <script src="login.js"></script>
+    <link rel="stylesheet" href="css\login.css">
 </head>
 <body>
     <div class="navbar">
-        <img src="images/logowhite.png" class="logo">
+        <img src="C:\Users\LENOVO\Downloads\CCAPDEV\Apdev-MCO\images\logowhite.png" class="logo">
         <a href="#">View Establishments</a>
         <a href="#">Search Establishments</a>
         <a href="#">Search Establishments</a>
@@ -36,5 +35,6 @@
             <div id="error"></div>
         </form>
     </div>
+    <script src="js\login.js"></script>
 </body>
 </html>
