Review JS Framework

--- a/establishmentreviews.css
+++ b/establishmentreviews.css
@@ -112,14 +112,15 @@ body{
 
 .review {   
     width: 60vw;
-    margin-bottom: 20px;    
+    margin-bottom: 40px;    
     padding: 20px;
     border: 4px solid #333;
     border-radius: 25px;
     scroll-snap-align: start;   
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease, height 0.3s ease;
     overflow: hidden;
     background-color: #444444;
+    height:20vw;
 }
 
 .preview{
@@ -132,6 +133,7 @@ body{
 
 .review:hover {
     transform: scale(1.1);
+    height: auto;
 }
 
 .restaurant-info {
