--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,11 +1,14 @@
 <div class="navbar">
-    <img src="C:\Users\LENOVO\Downloads\CCAPDEV\Apdev-MCO\images\logowhite.png" class="logo">
+    <img src="C:\Users\LENOVO\Downloads\CCAPDEV\Apdev-MCO\public\images\logowhite.png" class="logo">
     <a href="#">View Establishments</a>
     <a href="#">Search Establishments</a>
     <a href="#">Search Establishments</a>
     <a href="#">Reviews</a>
-    
-    <a href="register.html">Register account</a>
-    <a href="login.html">Login</a>
-    <a href="logout.html">Logout</a>
+
+    <select id="accountMenu">
+        <option value="" selected hidden>Account Management</option>
+        <option value="register.html">Register</option>
+        <option value="login.html">Login</option>
+        <option value="logout.html">Logout</option>
+    </select>
 </div>
