--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,27 +1,5 @@
-#accountMenu {
-    /* Remove default dropdown styling */
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    
-    /* Style like a button */
-    display: inline-block;
-    padding: 8px 12px;
-    border: none;
-    border-radius: 4px;
-    font-size: 14px;
-    cursor: pointer;
-    
-    /* Adjust colors based on your design */
-    background-color: #f0f0f0;
-    color: #333;
-  }
-  
-  #accountMenu:hover {
-    background-color: #e0e0e0;
-  }
-  
-  body{
+
+body{
     background-color: #222;
     color: #fff;
     font-family: sans-serif;
@@ -30,37 +8,8 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    overflow: hidden;
 }
-
-.navbar{
-    background-color: #111;
-    width: 100%;
-    padding: 1rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.logo{
-    height: 10px;
-}
-
-.navbar a {
-    color: #fff;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1); 
-}
-
-.navbar a:hover {
-    background-color: #333;
-}
-
-
 
 .login-box {
     margin: 2rem auto;
