--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,14 +1,19 @@
+<link rel="stylesheet" href="/css/navbar.css">
+
 <div class="navbar">
-    <img src="C:\Users\LENOVO\Downloads\CCAPDEV\Apdev-MCO\public\images\logowhite.png" class="logo">
+    <img src="\images\logowhite.png" class="logo">
     <a href="#">View Establishments</a>
     <a href="#">Search Establishments</a>
     <a href="#">Search Establishments</a>
     <a href="#">Reviews</a>
-
-    <select id="accountMenu">
-        <option value="" selected hidden>Account Management</option>
-        <option value="register.html">Register</option>
-        <option value="login.html">Login</option>
-        <option value="logout.html">Logout</option>
-    </select>
+    <div class="menu">
+        <select id="AccountMenu">
+            <option value="" selected hidden>Account Management</option>
+            <option value="register">Register</option>
+            <option value="login">Login</option>
+            <option value="logout">Logout</option>
+        </select>
+    </div>    
 </div>
+
+<script src="/js/navbar.js"></script>
