--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,20 +2,22 @@
 
 <div class="register-box">
     <h1>Register</h1>
-    <form method="post">
+    <form id="registerform" method="post">
+        <label for="fullname">Full Name:</label>
+        <input type="text" id="fullname" name="fullname" >
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" >
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" >
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <label for="confirm-password">Confirm Password:</label>
-        <input type="password" id="confirm-password" name="confirm-password" required>
+        <input type="password" id="password" name="password" >
+        <label for="confirmpassword">Confirm Password:</label>
+        <input type="password" id="confirmpassword" name="confirmpassword" >
         Choose an account type:
         <div class="radio-buttons">
-            <input type="radio" id="reviewer" name="options" value="reviewer">
+            <input type="radio" id="reviewer" name="options" value="reviewer" >
             <label for="reviewer">Reviewer</label>
-            <input type="radio" id="Owner" name="options" value="Owner">
+            <input type="radio" id="Owner" name="options" value="owner" >
             <label for="Owner">Owner</label>
         </div>
         <div class="button-group">
