--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,13 +3,13 @@
 
 <div class="login-box">
 	<h1>Login</h1>
-	<form id="loginform" method="post" name="loginform">
+	<form id="loginform" method="post">
 		<label for="username">Username:</label>
-		<input type="text" id="username" name="username" required>
+		<input type="text" id="username" name="username">
 		<label for="password">Password:</label>
-		<input type="password" id="password" name="password" required>
+		<input type="password" id="password" name="password">
 		<div class="button-group">
-			<button type="submit" id="loginBtn" class="but">Login</button>
+			<button type="submit" class="but">Login</button>
 			<button type="button" id="registerBtn" class="but">Register</button>
 		</div>
 	</form>
