created the hbs file for createreview and a path to it in the router

--- a/views/createreview.hbs
+++ b/views/createreview.hbs
@@ -1,25 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Login</title>
-    <link rel="stylesheet" href="createreview.css">
-    <script src="login.js"></script>
-</head>
-<body>
-    <div class="navbar">
-        <img src="images/logowhite.png" class="logo">
-        <a href="#">View Establishments</a>
-        <a href="#">Search Establishments</a>
-        <a href="#">Search Establishments</a>
-        <a href="#">Reviews</a>
-        
-        <a href="register.html">Register account</a>
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
-        
+<link rel="stylesheet" href="/css/createreview.css">
 
-        
-    </div>
+<body>
+    {{> navbar}}
+
     <div class="review-box">
         <h1>Write a Review</h1>
         
@@ -67,4 +50,3 @@
         </form>
     </div>
 </body>
-</html>
