--- a/public/css/createreview.css
+++ b/public/css/createreview.css
@@ -33,7 +33,11 @@ body{
     background-color: #333;
 }
 
-
+#review{
+    resize: none;
+    width: 615px;
+    height: 250px; 
+}
 
 .review-box {
     margin: 2rem auto;
@@ -41,6 +45,7 @@ body{
     border-radius: 5px;
     background-color: #333;
     width: 600px;
+    
 }
 
 #error {
