--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: #222;
     color: #fff;
@@ -8,8 +7,33 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    overflow: hidden;
 }
+
+.navbar{
+    background-color: #111;
+    width: 100%;
+    padding: 1rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.logo{
+    height: 10px;
+}
+
+.navbar a {
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1); 
+}
+
+.navbar a:hover {
+    background-color: #333;
+}
+
+
 
 .login-box {
     margin: 2rem auto;
