--- a/views/reviews.hbs
+++ b/views/reviews.hbs
@@ -1,41 +1,66 @@
-<link rel="stylesheet" type="text/css" href="/css/search.css">
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Establishment Reviews</title>
+    <meta charset="utf-8">
+    <meta name="author" content="Group 3 S20">
+    <link rel="stylesheet" type="text/css" href="establishmentreviews.css">
+</head>
 
 <body>
-    {{> searchbar}}
-    {{> filter}}
 
-    <div id="results">
-            <div id="post1" class="post">
-                <span class="title">Greenwich Pizza</span>
-                <span class="rating">3.8/5</span>
-                <br>
-                <p class="desc">Greenwich Pizza is a popular pizza chain in the Philippines, known for its delicious and affordable pizzas. Established in 1971...</p>
+    <div class="navbar">
+        <img src="images/logowhite.png" class="logo">
+        <a href="establishmentreviews.html">View Establishments</a>
+        <a href="search.html">Search Establishments</a>
+        <a href="establishmentreviews.html">Reviews</a>
+        <a href="register.html">Register account</a>
+        <a href="logout.html">Logout</a>
+    </div>
+
+
+    <div id="EstablishmentReviews">
+        <h1>{{establishment}}</h1>
+        
+        <div class="reviews-container">
+
+            {{reviews_list}}
+
+            <div class="review" id="review1">
+                <div class="restaurant-info">
+                    <h2>Gastronomia Fantasia</h2>
+                </div>
+                <h3><span class="by">by </span><span class="username">@restolover69</span></h3>
+                <div class="rating-container">
+                    <div class="rating" style="width: 90%;"></div>
+                    <span class="rating-value">4.5★    </span>
+                </div>
+                <p class="preview">If you're searching for a culinary oasis that tantalizes your taste buds and leaves you craving for more, look no further than "Gastronomia Fantasia." Nestled in the heart of the bustling city, this hidden gem promises an unforgettable dining experience that transcends the ordinary.<br><br>
+
+                    From the moment you step through the doors, you're greete   d by an ambiance that seamlessly blends elegance with warmth. The soft glow of ambient lighting sets the stage for an evening filled with gastronomic delights. The decor, with its modern yet cozy aesthetic, immediately puts you at ease, making you feel like a welcomed guest in someone's home.<br><br>
+                    
+                    But it's the menu that truly steals the spotlight. With a fusion of flavors from around the globe, each dish is a masterpiece crafted with precision and passion. Whether you're a seafood aficionado, a carnivore at heart, or a devout vegan, there's something here to satisfy every palate. From succulent grilled octopus to tender wagyu beef, every bite is a symphony of flavors that dance across your taste buds.<br><br>
+                    
+                    But what truly sets Gastronomia Fantasia apart is its commitment to using locally sourced, seasonal ingredients. Each dish is a celebration of the region's bounty, showcasing the freshest produce and artisanal ingredients available. Not only does this ensure an unparalleled dining experience, but it also supports the community and promotes sustainability—a win-win for both the diner and the environment.<br><br>
+                    
+                    And let's not forget about the impeccable service. The staff at Gastronomia Fantasia are not just servers; they're storytellers, guiding you through the menu with expertise and enthusiasm. Their passion for food is infectious, and their attention to detail ensures that every aspect of your dining experience is nothing short of exceptional.<br><br>
+                    
+                    Of course, no meal is complete without the perfect beverage pairing, and Gastronomia Fantasia delivers in spades. Whether you're in the mood for a crisp, aromatic white wine or a bold, full-bodied red, their extensive wine list has something for everyone. And for those looking to indulge their sweet tooth, their handcrafted cocktails and decadent desserts are sure to delight.<br><br>
+                    
+                    In conclusion, Gastronomia Fantasia is a culinary haven that exceeds expectations on every level. With its exquisite cuisine, warm ambiance, and impeccable service, it's no wonder this restaurant has garnered such rave reviews. Whether you're celebrating a special occasion or simply craving an unforgettable meal, a visit to Gastronomia Fantasia promises to be an experience you won't soon forget.</p>
+                <p class="helpful"><span class="mark">Helpful</span>: 15 | <span class="mark">Unhelpful</span>: 2</p>
+                <a href="establishmentreviews.html">Read More Reviews</a>
             </div>
-            <div id="post2" class="post">
-                <span class="title">SM Supermalls</span>
-                <span class="rating">4.4/5</span>
-                <br>
-                <p class="desc">SM Supermalls is the largest mall chain in the Philippines, owned and operated by SM Prime Holdings, a subsidiary of SM Investments Corporation. With over 70 malls spread...</p>
-            </div>
-            <div id="post3" class="post">
-                <span class="title">PLDT Inc.</span>
-                <span class="rating">2.2/5</span>
-                <br>
-                <p class="desc">PLDT Inc., or the Philippine Long Distance Telephone Company, is the largest and leading telecommunications and digital services provider in the Philippines. Established in 1928, PLDT has evolved from a traditional landline telephone service provider to a comprehensive telecommunications conglomerate offering a wide range of services...</p>
-            </div>
-            <div id="post4" class="post">
-                <span class="title">Jollibee</span>
-                <span class="rating">4.7/5</span>
-                <br>
-                <p class="desc">Jollibee is the largest fast-food chain in the Philippines, known for its Filipino-style fast food, including its popular fried chicken, burgers, and spaghetti. Established in 1978, Jollibee has become a global brand, expanding internationally with a diverse menu that caters to...</p>
-            </div>
-            <div id="post5" class="post">
-                <span class="title">World Balance</span>
-                <span class="rating">3.7/5</span>
-                <br>
-                <p class="desc">World Balance is a leading Filipino footwear and athletic apparel brand known for its stylish and functional products. Established in 1980, the brand has gained popularity for its high-quality shoes, sneakers, sandals, and activewear designed for various sports and casual activities. World Balance is committed to providing comfortable and affordable...</p>
-            </div>
+
         </div>
+
+        
+    </div>
+
+    <div id="page_navigation">
+        <div><a href="establishment_reviews_page_2.html">Next Page</a></div>
+    </div>
 </body>
 
-{{!-- <script src="/js/search.js"></script>  --}}
+</html>
