--- a/views/reviews.hbs
+++ b/views/reviews.hbs
@@ -3,7 +3,7 @@
 <body>
     {{> searchbar}}
     {{> filter}}
-
+    <button id="btn"></button>
     <div id="results">
             <div id="post1" class="post">
                 <span class="title">Greenwich Pizza</span>
@@ -38,4 +38,4 @@
         </div>
 </body>
 
-{{!-- <script src="/js/search.js"></script>  --}}
+<script src="/js/search.js"></script> 
