--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,12 +5,14 @@
     <a href="#">View Establishments</a>
     <a href="#">Search Establishments</a>
     <a href="#">Search Establishments</a>
-    <a href="#">Reviews</a>
+    <a href="/reviews">Reviews</a>
+    <a href="/createreview">Create a review</a>
     <div class="menu">
         <select id="AccountMenu">
             <option value="" selected hidden>Account Management</option>
             <option value="register">Register</option>
             <option value="login">Login</option>
+            <option value="profile">Profile</option>
             <option value="logout">Logout</option>
         </select>
     </div>    
