Fixed a bug in the register

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,13 +1,14 @@
 {{> navbar}}
 
 
-<link rel="stylesheet" href="/css/editprofile.css">
+<link rel="stylesheet" href="/css/profile.css">
 
 <div class="profile-container">
     <img class="profile-picture" src={{url}} alt="Profile Picture">
 
     <div class="username">Username: {{username}}</div>
     <div class="fullname">Full Name: {{fullname}}</div>
+    <div class="fullname">Bio: {{bio}}</div>
     <button id="password">Change password</button>
 </div>
 
