--- a/views/register.hbs
+++ b/views/register.hbs
@@ -14,8 +14,8 @@
         <input type="password" id="password" name="password" >
         <label for="confirmpassword">Confirm Password:</label>
         <input type="password" id="confirmpassword" name="confirmpassword" >
-        <label for="profilePicture">Upload your Avatar:</label>
-        <input type="file" id="profilePicture" name="profilePicture" accept="image/*" placeholder="Upload Profile Picture">
+        <label for="profilepicture">Upload your Avatar:</label>
+        <input type="text" id="profilepicture" name="profilepicture" placeholder="Upload your Profile Picture">
         Choose an account type:
         <div class="radio-buttons">
             <input type="radio" id="reviewer" name="options" value="reviewer" >
