changes in profile page

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -9,7 +9,7 @@
     <div class="username">Username: {{username}}</div>
     <div class="fullname">Full Name: {{fullname}}</div>
     <div class="fullname">Bio: {{bio}}</div>
-    <button id="password">Change password</button>
+    <button id="pfpchange">Change profile pic</button>
 </div>
 
-<script src="/js/editprofile.js"></script>
+<script src="/js/profile.js"></script>
