--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -26,7 +26,19 @@ body{
 #error.show {
     display: block; /* Show the message when the class "show" is added */
 }
-  
+button{
+    padding: 0.5rem 1rem;
+    background-color: #444;
+    border: none;
+    color: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+    margin: 10px;
+}
+
+button:hover {
+    background-color: #555;
+}
 
 h1 {
     text-align: center;
