--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -3,8 +3,7 @@
 <div class="navbar">
     <img src="\images\logowhite.png" class="logo">
     <a href="#">View Establishments</a>
-    <a href="#">Search Establishments</a>
-    <a href="#">Search Establishments</a>
+    <a href="/search">Search Establishments</a>
     <a href="/reviews">Reviews</a>
     <a href="/createreview">Create a review</a>
     <div class="menu">
