--- a/views/createreview.hbs
+++ b/views/createreview.hbs
@@ -6,7 +6,7 @@
     <div class="review-box">
         <h1>Write a Review</h1>
         
-        <form id="review-form" method="post">
+        <form id="reviewForm" method="post">
             <label for="title">Title:</label>
             <input type="text" id="title" name="title" required>
             <label for="rating">Rating:</label>
@@ -50,3 +50,4 @@
         </form>
     </div>
 </body>
+<script src="/js/createreview.js"></script>
